2004-08-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.tcl (::struct::tree::tree, ::struct::tree::_destroy):
	  Better alias for the object command (removed superfluous leading
	  colons).

	* stack.man: Stack, queue; version bumped to 1.3.
	* queue.man: 
	* stack.tcl: 
	* queue.tcl: 
	* pkgIndex.tcl:

	* queue.test:
	* queue.tcl: Changed way of mapping from queue object commands to
	  associoated namespaces. The object namespace now has the same
	  name and location of the object command. Adapted all tests to
	  account for this change.

	* queue.test:
	* queue.tcl: Changed dispatcher to auto-generate the list of queue
	  commands when a wrong one is given. Updated tests to account for
	  this. Changed dispatcher to uplevel 1 the method execution,
	  updated walking system to reflect this change.

	  See log entry 2003-07-06 as well.

	* stack.test:
	* stack.tcl: Changed way of mapping from stack object commands to
	  associoated namespaces. The object namespace now has the same
	  name and location of the object command. Adapted all tests to
	  account for this change.

	* stack.test:
	* stack.tcl: Changed dispatcher to auto-generate the list of stack
	  commands when a wrong one is given. Updated tests to account for
	  this. Changed dispatcher to uplevel 1 the method execution,
	  updated walking system to reflect this change.

	  See log entry 2003-07-06 as well.

	* stack.man: Fixed [SF Tcllib 1005380]. Documentation for peek and
	  pop now matching the actual behaviour. See also entry 2003-04-25
	  for the same thing, for queue.

	* tree.tcl: Spelling police.
	* graph.tcl:
	* stack.tcl:
	* queue.tcl:
	* matrix.tcl:
	* ChangeLog:

2004-08-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tests:
	* sets.tcl (::struct::set::Sdifference): Fixed the [Tcllib SF Bug
	  1002143]. Thanks to Todd Coram <maroc@users.sourceforge.net> for
	  the report. Set elements containing parentheses screw up the